--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
               alt="Email icon"
               class="icon contact-icon email-icon"
             />
-            <p><a href="mailto:examplemail@gmail.com">Example@gmail.com</a></p>
+            <p><a href="mailto:farhannashrul1003@gmail.com">farhannashrul1003@gmail.com</a></p>
           </div>
           <div class="contact-info-container">
             <img
@@ -363,7 +363,7 @@
               alt="LinkedIn icon"
               class="icon contact-icon"
             />
-            <p><a href="https://www.linkedin.com">LinkedIn</a></p>
+            <p><a href="https://www.linkedin.com/in/farhan-nashrul-ghazali">LinkedIn</a></p>
           </div>
         </div>
       </section>
