--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
     <section id="profile">
       <div class="section__pic-container">
         <img
-          src="./assets/profile-pic.jpeg"
+          src="./assets/profile_pic2.jpeg"
           alt="Farhan Nashrul Profile Picture"
+          class="pfp_pic"
         />
       </div>
       <div class="section__text">
@@ -80,7 +81,7 @@
       <div class="section-container">
         <div class="section__pic-container">
           <img
-            src="./assets/profile-pic.jpeg"
+            src="./assets/profile_pic.jpeg"
             alt="Profile picture"
             class="about-pic"
           />
@@ -187,7 +188,7 @@
                 />
                 <div>
                   <h3>PHP</h3>
-                  <p>Basic</p>
+                  <p>Experienced</p>
                 </div>
               </article>
               <article>
@@ -388,7 +389,7 @@
           </ul>
         </div>
       </nav>
-      <p>Copyright &#169; 2023 John Doe. All Rights Reserved.</p>
+      <p>Copyright &#169; 2024 Farhan Nashrul. All Rights Reserved.</p>
     </footer>
     <script src="script.js"></script>
   </body>
